renew and advance

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Chat app</title>
     <script src="socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
