--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Chat app</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="socket.io/socket.io.js" defer></script>
     <script src="script.js" defer></script>
-    <link rel="stylesheet" href="main.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="container">
-        <h1>
-            Nodejs + Socket Chat app
-        </h1>
-        <div id="chatSection">
-            <div class="chat-window"></div>
-            <form class="chat-form">
-                <label class="chat-label">
-                    Enter a message:
-                    <input type="text" class="chat-input" />
-                </label>
-                <input type="submit" class="chat-submit" value="enter" />
-            </form>
-        </div>
+    <h1>Welcome to the Chat!</h1>
+    <div class="setNameContainer">
+        <form class="set-name-form">
+            <label for="name">Enter your name:</label>
+            <input type="text" class="name-input" name="name" placeholder="Enter your name">
+            <input type="submit" value="Submit">
+        </form>
     </div>
-
-
 </body>
-
 </html>
